# bnuuy

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  bg.wgsl  config.rs  main.rs  pty.rs  renderer.rs  shaper.rs  terminal.rs
app/src/shaders/: bg.wgsl  undercurl.wgsl  underline.wgsl
screen_grid/: Cargo.toml
screen_grid/src/: lib.rs
src/: app.rs  main.rs  renderer.rs
