[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
cosmic-text = "0.14.2"
pollster = "0.4.0"
vte = "0.15.0"
wgpu = { workspace = true } 
winit = "0.30.11"
screen_grid = { workspace = true }
portable-pty = "0.9.0"
wgpu_glyph = "0.23.0"
glam = "0.30.4"
log = "0.4.27"
bytemuck = "1.23.1"
crossbeam-channel = "0.5.15"
arboard = "3.5.0"

