[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
cosmic-text = { version = "0.14.2", default-features = false, features = ["std"] }
pollster = "0.4.0"
vte = "0.15.0"
wgpu = { workspace = true } 
winit = "0.30.11"
screen_grid = { workspace = true }
portable-pty = "0.9.0"
glam = "0.30.4"
bytemuck = "1.23.1"
crossbeam-channel = "0.5.15"
arboard = "3.5.0"
serde = { version = "1.0.219", features = ["derive"] }
config = { version = "0.15.11", features = ["toml"] }
directories = "6.0.0"
opener = "0.8.2"
env_logger = { workspace = true } 
log = { workspace = true } 
glyphon = "0.9.0"
lru = "0.14.0"
